--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,19 +4,19 @@
 
   .main-header {
     border-radius: 5px;
-  }
+    max-width:100%;
+  }//ends main-header
 
   .intro {
 
     h2 {
       padding: 15px;
-    }
+    }//ends h2
 
     p {
       padding:0 15px;
-    }
-  
-  }
+    }//ends p
+  }//ends intro
 
   .space-images {
     display: flex;
@@ -28,20 +28,37 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-    }
-  }
+
+      @media @phone {
+        width: 90%;
+        margin: 2% auto;
+      }//ends media
+    }//ends img
+
+    .sky {
+      @media @phone {
+      display:none;
+    }//ends media
+  }//ends sky
+
+    .launch {
+      @media @phone {
+        display:none;
+      }//ends media
+    }//ends sky
+  }//ends space-images
 
   .visit-planets {
     padding: 15px;
 
     h3 {
       margin-top: 11px;
-    }
+    }//ends h3
 
     p {
       margin-top: 13px;
-    }
-  }
+    }//ends p
+  }//ends visit-planets
 
   .walk {
     margin-top: 60px;
@@ -50,36 +67,60 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 20px;
+      flex-direction: column;
+      padding: 20px 0;
+    }//ends media
+
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        order: 2;
+        width: 100%;
+        padding: 0 15px;
+      }//ends media
+
       h3 {
         margin-bottom: 10px;
-      }
+      }//ends h3
 
       p {
         margin-bottom: 26px;
-      }
+      }//ends p
 
       .btn {
         .bttn(@ebony-clay, 100px, white);
 
+        @media @phone {
+          .bttn(@ebony-clay, 100%, white);
+        }
+
         &:hover {
           background-color: white;
           color: @ebony-clay;
-        }
+
+        }//ends hover
       }//ends btn
-    }
+    }//ends walk-text
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        order: 1;
+        width: 91%;
+        margin: 0 auto;
+        padding-bottom: 20px;
+      }//ends media
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
-      }
-    }
-  }
+      }//ends img
+    }//ends walk-img
+  }//ends walk
 }// home
