--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,21 +6,27 @@ header {
     padding: 1%;
 
     @media @phone {
-        margin: 0 20%;
+    padding-bottom: 2%;
     }
-    
-
 
     nav {
     .flex(space-between, center);
     width: 28%;
     padding-top: 2%;
 
+    @media @phone {
+        width: 70%;
+    }
+
 
     a {
         text-decoration: none;
         color: @main-font-color;
         font-size: 2rem;
+
+        @media @phone {
+            font-size: 1.5rem;
+        }
     }//ends nav a
 }//ends nav
 }//ends header
