--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,7 @@
 // Navigation code here
+
+
+
 header {
     .flex(center, center);
     flex-direction: column;
@@ -7,7 +10,19 @@ header {
 
     @media @phone {
     padding-bottom: 2%;
-    }
+    }//ends header
+
+    h1 {
+        &:hover {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+            background-position: bottom;
+            background-repeat: repeat-x;
+            background-size: 20%;
+            border-bottom: 0;
+            padding-bottom: .3em;
+            text-decoration: none;
+            }//ends hover
+    }//ends h1
 
     nav {
     .flex(space-between, center);
@@ -16,7 +31,7 @@ header {
 
     @media @phone {
         width: 70%;
-    }
+    }//ends nav
 
 
     a {
@@ -26,7 +41,7 @@ header {
 
         @media @phone {
             font-size: 1.5rem;
-        }
+        }//ends media
     }//ends nav a
 }//ends nav
 }//ends header
