--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,11 @@
 // Home Content
 
 .home {
+  padding-top: 8.5%;
+
+  @media @phone {
+    padding-top: 19%;
+  }
 
   .main-header {
     border-radius: 5px;
@@ -95,7 +100,7 @@
 
         @media @phone {
           .bttn(@ebony-clay, 100%, white);
-        }
+        }//ends media
 
         &:hover {
           background-color: white;
