--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,14 @@
 // Navigation code here
 
 
-
 header {
     .flex(center, center);
     flex-direction: column;
-    background-color: @nav-bg;
+    background-color: rgba(229, 228, 226, .5);
     padding: 1%;
+    position: fixed;
+    width: 100%;
+    top: 0;
 
     @media @phone {
     padding-bottom: 2%;
