--- a/css/index.css
+++ b/css/index.css
@@ -171,8 +171,11 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #F6F6F6;
+  background-color: rgba(229, 228, 226, 0.5);
   padding: 1%;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 @media (max-width: 500px) {
   header {
@@ -220,6 +223,14 @@ footer {
   justify-content: center;
   align-items: center;
   margin-bottom: 2%;
+}
+.home {
+  padding-top: 8.5%;
+}
+@media (max-width: 500px) {
+  .home {
+    padding-top: 19%;
+  }
 }
 .home .main-header {
   border-radius: 5px;
